# wasm-timer

./: Cargo.toml  LICENSE
src/: lib.rs  timer.rs  wasm.rs
src/timer/: arc_list.rs  delay.rs  ext.rs  global.rs  interval.rs
src/timer/global/: desktop.rs  wasm.rs
