[package]
name = "wasm-timer"
edition = "2018"
description = "Abstraction over std::time::Instant and futures-timer that works on WASM"
version = "0.2.4"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
repository = "https://github.com/tomaka/wasm-timer"

[dependencies]
futures = "0.3.1"
parking_lot = "0.10"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.32"
send_wrapper = "0.4"
wasm-bindgen = "0.2.55"
wasm-bindgen-futures = "0.4.5"
web-sys = { version = "0.3.32", features = ["Performance", "Window"] }

[dev-dependencies]
async-std = "1.0"
