[package]
name = "wasm-timer"
edition = "2018"
description = "Abstraction over std::time::Instant and std::time::SystemTime that works on WASM"
version = "0.3.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
license = "MIT"
repository = "https://github.com/tomaka/wasm-timer"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = "0.3.32"
web-sys = { version = "0.3.32", features = ["Performance", "Window"] }

